--- a/GElogistica/pom.xml
+++ b/GElogistica/pom.xml
@@ -48,6 +48,11 @@
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.omnifaces</groupId>
+			<artifactId>omnifaces</artifactId>
+			<version>2.6.5</version>
+		</dependency>
 
 	</dependencies>
 </project>
