--- a/GElogistica/pom.xml
+++ b/GElogistica/pom.xml
@@ -5,6 +5,15 @@
 	<artifactId>GElogistica</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+	
+	<repositories>
+		<repository>
+			<id>prime-repo</id>
+			<name>Prime Repo</name>
+			<url>http://repository.primefaces.org</url>
+		</repository>
+	</repositories>
+	 
 	<build>
 		<resources>
 			<resource>
@@ -52,6 +61,11 @@
 			<groupId>org.omnifaces</groupId>
 			<artifactId>omnifaces</artifactId>
 			<version>2.6.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>glass-x</artifactId>
+			<version>1.0.6</version>
 		</dependency>
 
 	</dependencies>
