--- a/GElogistica/src/main/webapp/WEB-INF/web.xml
+++ b/GElogistica/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 	</servlet-mapping>
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>redmond</param-value>
+		<param-value>glass-x</param-value>
 	</context-param>
 	<welcome-file-list>
 		<welcome-file>/pages/private/gerenciadorUsuario.xhtml</welcome-file>
